--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-{logo.svg}
-<header>
-  <The Solar System>
-  </header>
+<!DOCTYPE html>
+<img src="images/logo.svg" alt="">
+  <title>The-Solar-System</title>
 
-[Stars]
-[Terrestrial planets]
-[Gas giants]
-[Dwarf planets]
-[Asteroids]
-[Comets]
+<a href="https://www.wikipedia.org/Stars">wikipedia</a>
+<a href="https://www.wikipedia.org/Terrestrial-planets">wikipedia</a>
+<a href="https://www.wikipedia.org/Gas-giants">wikipedia</a>
+<a href="https://www.wikipedia.org/Dwarf-planets">wikipedia</a>
+<a href="https://www.wikipedia.org/Asteroids">wikipedia</a>
+<a href="https://www.wikipedia.org/Comets">wikipedia</a>
 
 ---
 
