add all changes

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<img src="images/logo.svg" alt="">
-  <title>The-Solar-System</title>
-
+  <img src="images/logo.svg" alt="">
+  <h1>The-Solar-System</h1>
+  <article>
+    <h2>The Solar System—our home in the stars</h2>
+  The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
+  </article>
+<main>
+<h3>Stars</h3>
 <a href="https://www.wikipedia.org/Stars">wikipedia</a>
+<h4>Terrestrial planets</h4>
 <a href="https://www.wikipedia.org/Terrestrial-planets">wikipedia</a>
+<h5>Gas giants</h5>
 <a href="https://www.wikipedia.org/Gas-giants">wikipedia</a>
+<h6>Dwarf planets</h6>
 <a href="https://www.wikipedia.org/Dwarf-planets">wikipedia</a>
+<h7>Astroids</h7>
 <a href="https://www.wikipedia.org/Asteroids">wikipedia</a>
+<h8>Comets</h8>
 <a href="https://www.wikipedia.org/Comets">wikipedia</a>
-
----
-
-{banner}
-The Solar System—our home in the stars
-
----
-
-The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
+</main>
