--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-  <img src="images/logo.svg" alt="">
+  <head>
+    <img src="images/logo.svg" alt="">
+  </head>
   <h1>The-Solar-System</h1>
   <article>
     <h2>The Solar System—our home in the stars</h2>
@@ -19,3 +21,4 @@
 <h8>Comets</h8>
 <a href="https://www.wikipedia.org/Comets">wikipedia</a>
 </main>
+</html>
