--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html lang="en-ca">
   <head>
+    <meta chaset="utf-8">
     <img src="images/logo.svg" alt="">
+    <meta name="viewport" content="width=device-width,initial-scale=1"
   </head>
   <h1>The-Solar-System</h1>
   <article>
@@ -8,6 +11,7 @@
   The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
   </article>
 <main>
+  <!-- All the HTML content goes in here -->
 <h3>Stars</h3>
 <a href="https://www.wikipedia.org/Stars">wikipedia</a>
 <h4>Terrestrial planets</h4>
