--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-ca">
   <head>
-    <meta chaset="utf-8">
+    <meta charset="utf-8">
     <img src="images/logo.svg" alt="">
     <meta name="viewport" content="width=device-width,initial-scale=1"
   </head>
