--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
-    <img src="images/logo.svg" alt="">
-    <meta name="viewport" content="width=device-width,initial-scale=1"
+    <head>
+      <img src="images/logo.svg" alt="">
+    </head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <h1>The-Solar-System</h1>
   <article>
