--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
+  </head>
+  <head>
       <img src="images/logo.svg" alt="">
+    </head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   <h1>The-Solar-System</h1>
   <article>
