--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en-ca">
 <head>
  <meta charset="utf-8">
+ <title>
  <img src="images/logo.svg" alt="">
+</title>
 <h1>The-Solar-System</h1>
 <article>
  <h2>The Solar System—our home in the stars</h2>
