--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en-ca">
 <head>
  <meta charset="utf-8">
-
-<h1>The-Solar-System</h1>
+ <header>
+ <h1>The-Solar-System</h1>
+</header>
 <article>
  <h2>The Solar System—our home in the stars</h2>
  The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
