--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-<head>
- <meta charset="utf-8">
- <head>
+<meta charset="utf-8">
+<header>
  <h1>The-Solar-System</h1>
 </header>
 <article>
