--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-<meta charset="utf-8">
+<head>
+ <meta charset="utf-8">
+ <title> The-Solar-System</title>
+ <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+
+<body>
+
+  <!-- All the HTML content goes in here -->
+
 <header>
  <h1>The-Solar-System</h1>
 </header>
@@ -10,7 +19,6 @@
 </article>
 <main>
 
-  <!-- All the HTML content goes in here -->
 
   <img src="images/logo.svg" alt="">
 
