--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
 
   <img src="images/logo.svg" alt="">
 
-<h3>Stars</h3>
-<a href="https://www.wikipedia.org/Stars">wikipedia</a>
-<h3>Terrestrial planets</h3>
-<a href="https://www.wikipedia.org/Terrestrial-planets">wikipedia</a>
-<h3>Gas giants</h3>
-<a href="https://www.wikipedia.org/Gas-giants">wikipedia</a>
-<h3>Dwarf planets</h3>
-<a href="https://www.wikipedia.org/Dwarf-planets">wikipedia</a>
-<h3>Astroids</h3>
-<a href="https://www.wikipedia.org/Asteroids">wikipedia</a>
-<h3>Comets</h3>
-<a href="https://www.wikipedia.org/Comets">wikipedia</a>
+<ul>
+<li><h3>Stars</h3>
+<a href="https://www.wikipedia.org/Stars">wikipedia</a></li>
+<li><h3>Terrestrial planets</h3>
+<a href="https://www.wikipedia.org/Terrestrial-planets">wikipedia</a></li>
+<li><h3>Gas giants</h3>
+<a href="https://www.wikipedia.org/Gas-giants">wikipedia</a></li>
+<li><h3>Dwarf planets</h3>
+<a href="https://www.wikipedia.org/Dwarf-planets">wikipedia</a></li>
+<li><h3>Astroids</h3>
+<a href="https://www.wikipedia.org/Asteroids">wikipedia</a></li>
+<li><h3>Comets</h3>
+<a href="https://www.wikipedia.org/Comets">wikipedia</a></li>
 </main>
 </html>
