--- a/index.html
+++ b/index.html
@@ -23,17 +23,23 @@
   <img src="images/logo.svg" alt="">
 
 <ul>
-<li><h3>Stars</h3>
+<li>
+  <h3>Stars</h3>
 <a href="https://www.wikipedia.org/Stars">wikipedia</a></li>
-<li><h3>Terrestrial planets</h3>
+<li>
+  <h3>Terrestrial planets</h3>
 <a href="https://www.wikipedia.org/Terrestrial-planets">wikipedia</a></li>
-<li><h3>Gas giants</h3>
+<li>
+  <h3>Gas giants</h3>
 <a href="https://www.wikipedia.org/Gas-giants">wikipedia</a></li>
-<li><h3>Dwarf planets</h3>
+<li>
+  <h3>Dwarf planets</h3>
 <a href="https://www.wikipedia.org/Dwarf-planets">wikipedia</a></li>
-<li><h3>Astroids</h3>
+<li>
+  <h3>Astroids</h3>
 <a href="https://www.wikipedia.org/Asteroids">wikipedia</a></li>
-<li><h3>Comets</h3>
+<li>
+  <h3>Comets</h3>
 <a href="https://www.wikipedia.org/Comets">wikipedia</a></li>
 </ul>
 </main>
