--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title> The-Solar-System</title>
+  <title> The Solar System</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
@@ -11,11 +11,11 @@
   <!-- All the HTML content goes in here -->
 
   <header>
-    <h1>The-Solar-System</h1>
+    <h1>The Solar System</h1>
   </header>
   <article>
     <h2>The Solar System—our home in the stars</h2>
- The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
+    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
   </article>
   <main>
 
