save all changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
 
     <img src="images/logo.svg" alt="">
-
+  <nav>
     <ul>
       <li>
         <h3>Stars</h3>
@@ -41,6 +41,7 @@
         <h3>Comets</h3>
         <a href="https://www.wikipedia.org/Comets">wikipedia</a></li>
     </ul>
+  </nav>
   </main>
 </body>
 </html>
