Save all changes

--- a/index.html
+++ b/index.html
@@ -12,37 +12,39 @@
 
   <header>
     <h1>The Solar System</h1>
-    <nav>
-      <ul>
-        <li>
-          <h3>Stars</h3>
-          <a href="https://www.wikipedia.org/Stars">wikipedia</a></li>
-        <li>
-          <h3>Terrestrial planets</h3>
-          <a href="https://www.wikipedia.org/Terrestrial-planets">wikipedia</a></li>
-        <li>
-          <h3>Gas giants</h3>
-          <a href="https://www.wikipedia.org/Gas-giants">wikipedia</a></li>
-        <li>
-          <h3>Dwarf planets</h3>
-          <a href="https://www.wikipedia.org/Dwarf-planets">wikipedia</a></li>
-        <li>
-          <h3>Astroids</h3>
-          <a href="https://www.wikipedia.org/Asteroids">wikipedia</a></li>
-        <li>
-          <h3>Comets</h3>
-          <a href="https://www.wikipedia.org/Comets">wikipedia</a></li>
-      </ul>
-    </nav>
   </header>
   <article>
     <h2>The Solar System—our home in the stars</h2>
-    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
   </article>
-  <main>
+  <figure>
 
     <img src="images/logo.svg" alt="">
+    <figcaption>
+      <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+    </figcaption>
 
+  </figure>
+  <main>
+    <ul>
+      <li>
+        <h3>Stars</h3>
+        <a href="https://www.wikipedia.org/Stars">wikipedia</a></li>
+      <li>
+        <h3>Terrestrial planets</h3>
+        <a href="https://www.wikipedia.org/Terrestrial-planets">wikipedia</a></li>
+      <li>
+        <h3>Gas giants</h3>
+        <a href="https://www.wikipedia.org/Gas-giants">wikipedia</a></li>
+      <li>
+        <h3>Dwarf planets</h3>
+        <a href="https://www.wikipedia.org/Dwarf-planets">wikipedia</a></li>
+      <li>
+        <h3>Astroids</h3>
+        <a href="https://www.wikipedia.org/Asteroids">wikipedia</a></li>
+      <li>
+        <h3>Comets</h3>
+        <a href="https://www.wikipedia.org/Comets">wikipedia</a></li>
+    </ul>
   </main>
 </body>
 </html>
