Save all changes

--- a/index.html
+++ b/index.html
@@ -12,18 +12,41 @@
 
   <header>
     <h1>The Solar System</h1>
+    <figure>
+
+      <img src="images/logo.svg" alt="">
+      <figcaption>
+        <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+      </figcaption>
+
+    </figure>
+    <nav>
+      <ul>
+        <li>
+          <a>Stars</a>
+        </li>
+        <li>
+          <a>Terrestrial Planets</a>
+        </li>
+        <li>
+          <a>Gas Gaints</a>
+        </li>
+        <li>
+          <a>Dwarf Planets</a>
+        </li>
+        <li>
+          <a>Asteroids</a>
+        </li>
+        <li>
+          <a>Comets</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <article>
     <h2>The Solar System—our home in the stars</h2>
   </article>
-  <figure>
 
-    <img src="images/logo.svg" alt="">
-    <figcaption>
-      <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
-    </figcaption>
-
-  </figure>
   <main>
     <ul>
       <li>
