--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <main>
     <article>
-      <h2>The Solar System—our home in the stars</h2>
+      <p>The Solar System—our home in the stars</p>
     </article>
     <h3>Stars</h3>
     <a href="https://www.wikipedia.org/Stars">wikipedia</a>
