Save the changes

--- a/index.html
+++ b/index.html
@@ -23,22 +23,28 @@
     <nav>
       <ul>
         <li>
-          <a>Stars</a>
+          <h2>Stars</h2>
+          <a href="https://www.wikipedia.org/Stars">wikipedia</a>
         </li>
         <li>
-          <a>Terrestrial Planets</a>
+          <h2>Terrestrial planets</h2>
+          <a href="https://www.wikipedia.org/Terrestrial-planets">wikipedia</a>
         </li>
         <li>
-          <a>Gas Gaints</a>
+          <h2>Gas giants</h2>
+          <a href="https://www.wikipedia.org/Gas-giants">wikipedia</a>
         </li>
         <li>
-          <a>Dwarf Planets</a>
+          <h2>Dwarf planets</h2>
+          <a href="https://www.wikipedia.org/Dwarf-planets">wikipedia</a>
         </li>
         <li>
-          <a>Asteroids</a>
+          <h2>Astroids</h2>
+          <a href="https://www.wikipedia.org/Asteroids">wikipedia</a>
         </li>
         <li>
-          <a>Comets</a>
+          <h2>Comets</h2>
+          <a href="https://www.wikipedia.org/Comets">wikipedia</a>
         </li>
       </ul>
     </nav>
